--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="galeriaNovedades">
                     <a href="../catalogo/pages/detalle.html">
                         <div class="productos">
-                            <img src="../catalogo/assets/img/Novedades/deco1.jpg" alt="Porta Vela con banco" loading="lazy">
+                            <img src="../catalogo/assets/img/novedades/deco1.jpg" alt="Porta Vela con banco" loading="lazy">
                             <div class="tituloProducto"><h4>Porta vela con banco</h4></div>
                         </div>
                     </a>  
@@ -136,16 +136,16 @@
                 <h3 class="tituloSection">Los Favoritos</h3>
                 <div class="galeriaFavoritos">
                     <div class="favoritoItem">
-                        <img class="imgFavorito" src="../catalogo/assets/img/Favoritas/cajitapañuelo.jpg" alt="Kit mesita de luz" loading="lazy">
+                        <img class="imgFavorito" src="../catalogo/assets/img/favoritas/cajitapañuelo.jpg" alt="Kit mesita de luz" loading="lazy">
                     </div>
                     <div class="favoritoItem">
-                        <img class="imgFavorito" src="../catalogo/assets/img/Favoritas/nuecesalmendras.jpg" alt="Frascos para Nueces y Almendras" loading="lazy">
+                        <img class="imgFavorito" src="../catalogo/assets/img/favoritas/nuecesalmendras.jpg" alt="Frascos para Nueces y Almendras" loading="lazy">
                     </div>
                     <div class="favoritoItem">
-                        <img class="imgFavorito" src="../catalogo/assets/img/Favoritas/kitdesayunador1.jpg" alt="Desayunador tereré" loading="lazy">
+                        <img class="imgFavorito" src="../catalogo/assets/img/favoritas/kitdesayunador1.jpg" alt="Desayunador tereré" loading="lazy">
                     </div>
                     <div class="favoritoItem">
-                        <img class="imgFavorito" src="../catalogo/assets/img/Favoritas/kitdesayunador2.jpg" alt="Desayunar con taza y cucharita" loading="lazy">
+                        <img class="imgFavorito" src="../catalogo/assets/img/favoritas/kitdesayunador2.jpg" alt="Desayunar con taza y cucharita" loading="lazy">
                     </div>
                 </div>
             </section>
@@ -164,7 +164,7 @@
                     <li class="nav-link"><a class="linkNav administrador" href="./pages/admin_catalogo.html">Administrador de Catálogo</a></li>
                 </ul>
             </nav>
-                <img class="whatsapp" src="../catalogo/whatsapp.svg" justify-content-end alt= "whatsapp">
+                <img class="whatsapp" src="./whatsapp.svg" justify-content-end alt= "whatsapp">
             </a>
             <a href="#main" class="flechaArriba position-fixed bottom-0 end-0">
                 <img src="./assets/img/flecha-hacia-arriba.png" justify-content-end alt="ir arriba flecha">
