--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <li class="nav-link"><a class="linkNav administrador" href="./pages/admin_catalogo.html">Administrador de Catálogo</a></li>
                 </ul>
             </nav>
-                <img class="whatsapp" src="./whatsapp.svg" justify-content-end alt= "whatsapp">
+                <img class="whatsapp" src="../catalogo/whatsapp.svg" justify-content-end alt= "whatsapp">
             </a>
             <a href="#main" class="flechaArriba position-fixed bottom-0 end-0">
                 <img src="./assets/img/flecha-hacia-arriba.png" justify-content-end alt="ir arriba flecha">
