Recuperacion de index y carpetas con ultimos cambios

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             </ul>
         </nav>
         <nav class="redes_sociales">
-            <a href="https://wa.me/2324503641" target="_blank">  <img src="../sentirenlibertad/whatsapp.svg" justify-content-end alt= "whatsapp"></a>
-            <a href="https://www.instagram.com/sentiren.libertad/" target="_blank"><img src="../sentirenlibertad/instagram.svg" justify-content-end alt="instagram"></a>
+            <a href="https://wa.me/2324503641" target="_blank">  <img src="../catalogo_php/whatsapp.svg" justify-content-end alt= "whatsapp"></a>
+            <a href="https://www.instagram.com/sentiren.libertad/" target="_blank"><img src="../catalogo_php/instagram.svg" justify-content-end alt="instagram"></a>
         </nav>
         <a href="#main" class="flechaArriba"><img src="./assets/img/flecha-hacia-arriba.png" justify-content-end alt="ir arriba flecha"></a>
         <p>Todos los derechos reservados.</p>
